# PsyQuationTestTask

./: .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  manage.py  pyproject.toml
PsyQuationTestTask/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account__balance.py  0003_remove_account__balance.py  0004_auto_20201108_1508.py
transactions/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_auto_20201105_1548.py  0003_auto_20201106_1310.py
