[tool.poetry]
name = "psyquationtesttask"
version = "0.1.0"
description = ""
authors = ["Kyryll <kyryllpar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.3"
djangorestframework = "^3.12.1"
django-filter = "^2.4.0"
drf-yasg = "^1.20.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
